# modulespp

./: .gitignore  CMakeLists.txt  README.md  license.txt
demo/: CMakeLists.txt  main.cpp
demo/core/: CMakeLists.txt  core.cpp  plugin.json  service.h
demo/plugins/: CMakeLists.txt
demo/plugins/demo_plugin/: CMakeLists.txt  demo_plugin.cpp
examples/: CMakeLists.txt  hello_world.cpp  module_depends.cpp  my_plugin.cpp  register_service.cpp  static_module_loader.cpp
examples/demo_plugin/: CMakeLists.txt  demo_plugin.cpp  demo_plugin2.cpp  demo_plugin_test.cpp  plugin.json
include/: any_ptr_map.h  application.h  module.h  module_loader.h  module_mgr.h  topo_sorting.h
include/modulepp/: application.h  module.h  plugin_config.h  static_module_loader.h
include/modulepp/details/: application_impl.h  topo_sorting.h
modulepp/: application.cpp  application.h  module.h  modulepp.h  plugin_config.h  plugin_loader.h  plugin_module.h  static_module_loader.h
modulepp/details/: application_impl.h  plugin_loader_impl.h  topo_sorting.h
modulepp/loader/: plugin_loader.h  static_module_loader.cpp  static_module_loader.h
modulepp/loader/details/: plugin_loader_impl.cpp  plugin_loader_impl.h  plugin_loader_impl.ipp
modulepp/plugin/: plugin_config.h  plugin_module.h
src/: application.cpp  application.h  module.cpp  modules.h  static_module_loader.cpp
tests/: CMakeLists.txt  main.cpp  mock_modules.h  test-modules.cpp  test_any_ptr_map.cpp  test_application.cpp  test_modules.cpp  test_plugin_config.cpp  test_plugin_config_load.cpp  test_plugin_loader.cpp  test_topo_sorting.cpp
